# Air-Quality-Py

./: .gitignore  CHANGELOG.md  IMPLEMENTATION_COMPLETE.md  README.md  acceptance_test.py  pyproject.toml
.github/: copilot-instructions.md
.specify/memory/: constitution.md
.specify/templates/: spec-template.md  tasks-template.md
specs/001-core-foundation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-core-foundation/checklists/: requirements.md
specs/001-core-foundation/contracts/: air_quality_module.md
specs/002-units-time/: HANDOFF.md  data-model.md  integration-notes.md  plan.md  quickstart.md  research.md  spec.md  tasks-implementation.md  tasks.md
specs/002-units-time/checklists/: requirements.md
specs/002-units-time/contracts/: time_utils_api.md  units_api.md
specs/003-stats-core/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-stats-core/checklists/: requirements.md
specs/003-stats-core/contracts/: python_api.md
src/air_quality/: __init__.py  exceptions.py  logging.py  mapping.py  module.py  provenance.py  qc_flags.py  time_utils.py  units.py
src/air_quality/analysis/: __init__.py  constants.py  correlation.py  descriptive.py  trend.py
src/air_quality/dataset/: __init__.py  base.py  time_series.py
src/air_quality/modules/: __init__.py  row_count.py  (+3 more)
tests/: test_dataset.py  test_dataset_lazyframe.py  test_dataset_units_integration.py  test_deps_import.py  test_exceptions.py  test_logging.py  test_mapping.py  test_mapping_perf.py  test_module_lifecycle.py  test_module_logging.py  test_performance_copy.py  test_provenance.py  test_public_api.py  test_time_bounds.py  test_time_resample_roll.py  test_units_conversion.py  test_units_enum.py  test_units_performance.py  test_units_rounding.py  test_units_schema_validation.py
tests/perf_smoke/: factories.py  test_perf_all.py  test_perf_correlation.py  test_perf_trend.py
(+48 files in other folders)
