[project]
name = "air-quality"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ahmed Aredah", email = "Ahmed.Aredah@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "mypy>=1.18.2",
    "pandas>=2.3.3",
    "polars>=1.35.1",
    "pyarrow>=22.0.0",
]

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pandas-stubs>=2.3.2.250926",
    "pyarrow-stubs>=20.0.0.20251107",
    "pytest>=9.0.0",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-k \"not slow\"')",
]
