[project]
name = "air-quality"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ahmed Aredah", email = "Ahmed.Aredah@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "mypy>=1.18.2",
    "pandas>=2.3.3",
    "polars>=1.35.1",
    "pyarrow>=22.0.0",
    "scipy>=1.16.3",
]

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pandas-stubs>=2.3.2.250926",
    "pyarrow-stubs>=20.0.0.20251107",
    "pytest>=9.0.0",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-k \"not slow\"')",
]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
warn_redundant_casts = true
warn_unused_ignores = true

# Per-module relaxed settings (only if needed)
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# Strict mode for new stats_analysis package (Constitution Section 6)
[[tool.mypy.overrides]]
module = "air_quality.stats_analysis.*"
strict = true
